--- a/estilo/style.css
+++ b/estilo/style.css
@@ -1,5 +1,144 @@
 @charset "UTF-8";
 
 *{
-    background-color: thistle;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+}
+
+body{
+    font-size: 100%;
+    background: linear-gradient(90deg, rgb(107, 42, 168), violet);
+}
+
+.header{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding: 10px;
+    box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.438);
+}
+
+.logo{
+    border: 2px solid white;
+    border-radius: 50%;
+    padding: 15px;
+    box-shadow: 2px 3px 5px rgba(0, 0, 0, 0.438);
+}
+
+.logoo{
+    height: 72px;
+}
+
+.menu{
+    display: flex;
+    gap: 32px;
+}
+
+.menu-item{
+    color: wheat;
+    text-transform: uppercase;
+    font-size: 20px;
+}
+
+.main{
+    margin-bottom: 48px;
+}
+
+.principal{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
+.escrito{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 32px;
+}
+
+.h1{
+    text-transform: uppercase;
+    color: rgb(82, 44, 44);
+    font-size: 74px;
+    text-shadow: 1px 2px 3px rgba(0, 0, 0, 0.466);
+}
+
+.h2{
+    text-transform: uppercase;
+    color: wheat;
+    font-size: 20px;
+}
+
+.button{
+    background-color: wheat;
+    width: 180px;
+    height: 60px;
+    border: none;
+    box-shadow: 4px 5px 4px rgba(0, 0, 0, 0.253);
+    border-radius: 10px;
+    font-weight: bold;
+    font-size: 24px;
+    color: rgb(145, 67, 218);
+}
+
+.button:hover{
+    background-color:tan;
+}
+
+.cinzeiro{
+    background-image: url(/imagens/imagem.jpg);
+    background-size: cover;
+    background-position: center;
+    width: 395px;
+    height: 400px;
+    border-radius: 50%;
+    margin: 30px 0px;
+    box-shadow: 4px 5px 7px rgba(0, 0, 0, 0.453);
+}
+
+.secundario{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
+    margin-top: 48px;
+}
+
+.h3{
+    color: wheat;
+    border-top: 0.4px solid wheat;
+    padding-top: 48px;
+    font-weight: bold;
+    font-size: 24px;
+    margin-bottom: 16px;
+}
+
+.paragrafo{
+    color: wheat;
+    font-size: 18px;
+}
+
+.footer{
+    display: flex;
+    align-items: baseline;
+    justify-content: center;
+    padding: 32px;
+    box-shadow: 2px 1px 10px rgba(0, 0, 0, 0.438);
+}
+
+.rodape0{
+    text-transform: uppercase;
+    color: wheat;
+    font-size: 20px;
+}
+    
+.rodape{
+    color: wheat;
+    font-size: 30px;
+    margin: 5px;
 }
